fix logo size on laptop+, fix overview icon alignment

--- a/src/app/map-tool/map/map/map.component.scss
+++ b/src/app/map-tool/map/map/map.component.scss
@@ -245,7 +245,9 @@ app-location-cards {
     position:absolute;
     top:0;
     right:0;
-    display:block;
+    display:flex;
+    align-items: center;
+    justify-content: center;
     width: grid(5);
     height: grid(6);
     background: #fff;
